<resources>
    <string name="app_name">StudentPortal</string>
    <string name="action_settings">Settings</string>
    <string name="url">Url</string>
    <string name="url_name">Title</string>
    <string name="add_portal">ADD PORTAL</string>
    <string name="google_url">https://www.google.com</string>
    <string name="vlo_url">https://vlo.informatica.hva.nl/</string>
    <string name="dmci_url">http://www.hva.nl/faculteit/fdmci/digitale-media-en-creatieve-industrie.html</string>
    <string name="rooster_url">https://rooster.hva.nl/</string>
    <string name="rooster">Rooster</string>
    <string name="dmci">DMCI</string>
    <string name="vlo">VLO</string>
</resources>
